# maxray

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test-package.yml
maxray/: __init__.py  __main__.py  function_store.py  logging.py  nodes.py  reprs.py  transforms.py  walkers.py
maxray/_test_module/: __main__.py
maxray/capture/: __init__.py  logs.py  logs_cli.py  reprs.py
maxray/inators/: base.py  callgraph.py  capture.py  core.py  debug.py  display.py  livegrep.py  progress.py  rerun.py  rich.py  template.py
maxray/runner/: __init__.py  __main__.py  exec_sources.py
tests/: sample_script.py  test_external_packages.py  test_function_store.py  test_inator_lib.py  test_loaders.py  test_node_props.py  test_script_interface.py  test_transforms.py
tests/fixtures/compat_scripts/: pandas_calls.py
tests/fixtures/static_scripts/: exact_source_matching.py
tests/integration/: test_external_source_maps.py
